Update markup in choice examples, use flex-wrap to avoid needless markup

--- a/packages/core/src/components/FormLabel/FormLabel.scss
+++ b/packages/core/src/components/FormLabel/FormLabel.scss
@@ -30,8 +30,8 @@ Style guide: components.form-label
   margin-top: 0;
 }
 
-.ds-c-label__container {
-  min-height: $choice-size;
+.ds-c-label-content__container {
+  width: 100%;
 }
 
 /*
